--- a/骸兵.md
+++ b/骸兵.md
@@ -1,12 +1,9 @@
 # 骸兵
 
-夜11時以降にHPがちょっと下がる
-2割減少
-
-
+1時・9時・ 14時・ 22時にHPがちょっと下がる（2割減少）
 
 ## クラントライアル
 
-###Lv.22
+### Lv.22
 #### HP
 約6,000億 (約4800億)
